cmake_minimum_required( VERSION 2.6. )
set( CMAKE_CXX_STANDARD 11 )
option( _TEST_GTEST "Build gtest testing set" OFF )
option( _TEST_MANUAL "Build for manual debugging" OFF )

include_directories( avl_tree )
#include_directories( avl_tree_container )
add_subdirectory( avl_tree )
#add_subdirectory( test_gtest )
if( _TEST_GTEST )
    add_subdirectory( test_gtest )
elseif( _TEST_MANUAL )
    add_subdirectory( test_manual )
endif()
